# Nsu.Cpp

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Context.h  Exceptions.h  Factory.h  Operation.h  OperationInterface.h  OperationMaker.h  README.md
StackCalculator/: CMakeLists.txt  Calculator.cpp  Calculator.h  Context.h  Exceptions.h  Factory.h  Operation.h  OperationMaker.h  main.cpp
StackCalculator/Operations/: Define.cpp  Define.h  Div.cpp  Div.h  Mul.cpp  Mul.h  Pop.cpp  Pop.h  Print.cpp  Print.h  Push.cpp  Push.h  Sqrt.cpp  Sqrt.h  Sub.cpp  Sub.h  Sum.cpp  Sum.h
lab0A/: CMakeLists.txt  main.cpp
lab0B/: CMakeLists.txt  WordCount.cpp  WordCount.h  main.cpp  pushkin.csv  pushkin.txt
lab2/StackCalculator/: CMakeLists.txt  Calculator.cpp  Calculator.h  CalculatorOperation.h  CalledExceptions.h  Context.h  DetectCalculatorOperation.h  Exceptions.h  ExecutionContext.cpp  ExecutionContext.h  Factory.h  Operation.h  OperationCreator.h  OperationCreatorImpl.h  OperationInterface.h  OperationMaker.h  main.cpp
lab2/StackCalculator/Operations/: Average.cpp  Average.h  Define.cpp  Define.h  Div.cpp  Division.cpp  Division.h  Mul.cpp  Multiplication.cpp  Multiplication.h  Pop.cpp  Pop.h  Print.cpp  Print.h  Push.cpp  Push.h  Sqrt.cpp  Sqrt.h  Sub.cpp  Substraction.cpp  Substraction.h  Sum.cpp  Sum.h
